Closed Bug 1256545 Opened 9 years ago Closed 9 years ago

netwerk/srtp/src/crypto/cipher/aes_icm.c(402): warning C4311: 'type cast': pointer truncation from 'unsigned char *' to 'unsigned long'

Categories

(Core :: WebRTC: Networking, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: gps, Assigned: jesup)

References

Details

Attachments

(1 file, 1 obsolete file)

This warning gets converted to an error when building on Visual Studio 2015 in automation.
As part of unblocking building with VS2015u1 in automation, I'm mass disabling compiler warnings that are turned into errors. This is not the preferred mechanism to fix compilation warnings. So hopefully this patch never lands because someone insists on fixing the underlying problem instead. But if it does land, hopefully the workaround is only temporary. Review commit: https://reviewboard.mozilla.org/r/39975/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/39975/
Attachment #8730528 - Flags: review?(rjesup)
We can probably just cast to uint64_t to fix this.
Actually (uintptr_t) it the right cast. I'll fix it locally.
Assignee: nobody → rjesup
Rank: 17
Priority: -- → P1
Comment on attachment 8730528 [details] MozReview Request: Bug 1256545 - Disable C4311 to unblock compilation on VS2015; r?jesup https://reviewboard.mozilla.org/r/39975/#review36675 would be fine, but I'd rather fix the warning via my patch
Attachment #8730528 - Flags: review?(rjesup) → review+
Comment on attachment 8730814 [details] MozReview Request: Bug 1256545: avoid compiler warning for pointer truncation when checking low bits r?gps https://reviewboard.mozilla.org/r/40169/#review36733 I haven't touch C++ in a very long time. You should find someone who has to review this.
Attachment #8730814 - Flags: review?(gps)
Comment on attachment 8730814 [details] MozReview Request: Bug 1256545: avoid compiler warning for pointer truncation when checking low bits r?gps https://reviewboard.mozilla.org/r/40169/#review36737
Attachment #8730814 - Flags: review+
Comment on attachment 8730528 [details] MozReview Request: Bug 1256545 - Disable C4311 to unblock compilation on VS2015; r?jesup removing r+ in favor of real fix
Attachment #8730528 - Flags: review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Attachment #8730528 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: