Bug 1256545: avoid compiler warning for pointer truncation when checking low bits r=bwc

MozReview-Commit-ID: 2ZJANXx4Qx8